<resources>
    <string name="app_name">Bike_Showroom_Management_System</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Aboutus">Aboutus</string>
    <string name="menu_Contactus">Contactus</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">send</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_notification">nofication</string>
</resources>
